# file-search-engine

./: CMakeLists.txt  README.md  config.json  main.cpp  result.json
resources/: CMakeLists.txt
